<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:paddingTop="16dp">
        <!-- This guideline divides the layout into a left and right half and is used for alignment -->
        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
        <!-- Humidity label -->
        <TextView
            android:id="@+id/tv_humidity_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/humidity_label"
            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details"
            app:layout_constraintVertical_bias="0.33"/>
        <!-- Humidity measurement -->
        <TextView
            android:id="@+id/tv_humidity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_humidity_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="38%"/>
        <!-- Pressure label -->
        <TextView
            android:id="@+id/tv_pressure_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pressure_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details"/>
        <!-- Pressure measurement -->
        <TextView
            android:id="@+id/tv_pressure"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="995 hPa"/>
        <!-- Wind label -->
        <TextView
            android:id="@+id/tv_wind_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wind_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure_label"
            app:layout_constraintVertical_bias="0.65999997"/>
        <!-- Wind measurement -->
        <TextView
            android:id="@+id/tv_wind_measurement"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_wind_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="4km/h NW"/>
    </android.support.constraint.ConstraintLayout>
</layout>